added navigation (hamburger) bars to appear when screen size drops below certain 1000px and hide the navigation list

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/30c613f37e.js" crossorigin="anonymous"></script>
         <title>Michael's Porfolio</title>
         <meta charset='UTF-8'/>
     </head>
@@ -17,6 +18,9 @@
                     <li><a href='#my-projects'>My projects</a></li>
                     <li><a href='#contact'>Contact</a></li>
                 </ul>
+                <button class='hamburger' id='hamburger'>
+                    <i class="fas fa-bars"></i>
+                </button>
             </nav>
             <div class='hero-area'>
                 <div class='hero-text'>
