added functionality to navigation bars to show nav list when clicked with javascript and added styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class='hero'>
             <nav>
                 <img class='logo' src='src/images/MyLogo1.png' alt='my logo'/>
-                <ul>
+                <ul id='nav-list'>
                     <li><a href='#about-me'>About me</a></li>
                     <li><a href='#my-projects'>My projects</a></li>
                     <li><a href='#contact'>Contact</a></li>
