added event listener to aboutMeButton div instead of <a> tag for better funtionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class='hero-text'>
                     <h1>Michael Primavera</h1>
                     <p>Full Stack Developer</p>
-                    <div class='button'><a href='#about-me'>About me</a></div>
+                    <div class='button' id='aboutMeButton'>About me</div>
                 </div>
                 <div class='socials'>
                     <a href='https://www.linkedin.com/in/michael-primavera-2282001ba/' class='social'>
