--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <!-- <p><a href='thankyou.html'>TY PAGE TEST</a></p> -->
 
 
-            <form class='contact-form' action="https://formsubmit.co/mikeprimo91@gmail.com" method="POST">
+            <form class='contact-form' action="https://formsubmit.co/c6c80f2493b5d7d4f376f1930401d4a7" method="POST">
                 <input type="hidden" name="_subject" value="New submission!">
                 <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_next" value="thankyou.html">
