url fix for post email submission

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <form class='contact-form' action="https://formsubmit.co/c6c80f2493b5d7d4f376f1930401d4a7" method="POST">
                 <input type="hidden" name="_subject" value="New submission!">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="thankyou.html">
+                <input type="hidden" name="_next" value="https://pastasauce59.github.io/Portfolio/thankyou">
                 <input type="text" name="name" placeholder="Your name" required>
                 <input type='email' name='email' placeholder='Email Address' required>
                 <!-- <input type="text" name="message" placeholder='Write your message here' required> -->
