added back button on thank you page to return to portfolio page / created separate thankyou.js file to handle click event for button on thank you page / adjusting css styling to center everything for thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -12,9 +12,11 @@
     <body>
         <div class='thanks'>
             <h1>Thank you for your submission!</h1>
+            <div class='button' id='back-home'>⬅️ Home</div>
+            <!-- <div class='button' id='back-home'><a href='index.html'>⬅️ Home</a></div> -->
         </div>
-        <!-- <div class='button'></div> -->
+        
        
-        <script src='src/app.js'></script>
+        <script src='src/thankyou.js'></script>
     </body>
 </html>
