spelling errors fix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/30c613f37e.js" crossorigin="anonymous"></script>
-        <title>Michael's Porfolio</title>
+        <title>Michael's Portfolio</title>
         <meta charset='UTF-8'/>
     </head>
     <body>
