--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                         <svg xmlns="http://www.w3.org/2000/svg" fill='#ffffff' width="50" height="50" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                     </a>
                     <a href='https://github.com/pastasauce59/' target="_blank" rel="noopener noreferrer" class='social'>
-                        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill='#ffffff' width="50" height="50" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg> -->
                         <svg xmlns="http://www.w3.org/2000/svg" fill='#ffffff' width="50" height="50" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4.466 19.59c-.405.078-.534-.171-.534-.384v-2.195c0-.747-.262-1.233-.55-1.481 1.782-.198 3.654-.875 3.654-3.947 0-.874-.312-1.588-.823-2.147.082-.202.356-1.016-.079-2.117 0 0-.671-.215-2.198.82-.64-.18-1.324-.267-2.004-.271-.68.003-1.364.091-2.003.269-1.528-1.035-2.2-.82-2.2-.82-.434 1.102-.16 1.915-.077 2.118-.512.56-.824 1.273-.824 2.147 0 3.064 1.867 3.751 3.645 3.954-.229.2-.436.552-.508 1.07-.457.204-1.614.557-2.328-.666 0 0-.423-.768-1.227-.825 0 0-.78-.01-.055.487 0 0 .525.246.889 1.17 0 0 .463 1.428 2.688.944v1.489c0 .211-.129.459-.528.385-3.18-1.057-5.472-4.056-5.472-7.59 0-4.419 3.582-8 8-8s8 3.581 8 8c0 3.533-2.289 6.531-5.466 7.59z"/></svg>
                     </a>
                 </div>
@@ -74,12 +73,23 @@
             <h2>Projects</h2>
             <div class='project-container'>
                 <div class='project-card'>
+                    <img class='project-image' src='src/images/CalculatorJS.png' alt='CalculatorJS' />
+                    <h3>CalculatorJS</h3>
+                    <p class='subtext'>A calculator made using JavaScript.</p>
+                    <div class='hairline'>
+                    <hr/>
+                    <p class='subtext'><a class='project-link' href='https://pastasauce59.github.io/calculatorJS/' target="_blank" rel="noopener noreferrer">View here</a> |
+                        <a class='project-link' href='https://github.com/pastasauce59/calculatorJS' target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </p>
+                    </div>
+                </div>
+                <div class='project-card'>
                     <img class='project-image' src='src/images/Brain-Store-M-Board.png' alt='Brain-Store-M Board' />
                     <h3>Brain-store-m Board</h3>
                     <p class='subtext'>An application to store brainstormed ideas akin to virtual sticky notes.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/brain-store-m-board_frontend' target="_blank" rel="noopener noreferrer">View here</a></p>
+                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/brain-store-m-board_frontend' target="_blank" rel="noopener noreferrer">GitHub</a></p>
                     </div>
                 </div>
                 <div class='project-card'>
@@ -88,7 +98,7 @@
                     <p class='subtext'>An application for booking a room (or rooms) at your choice of hotels for a relaxing vacation and brief reprieve from coding.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/full-stack-hotels' target="_blank" rel="noopener noreferrer">View here</a></p>
+                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/full-stack-hotels' target="_blank" rel="noopener noreferrer">GitHub</a></p>
                     </div>
                 </div>
                 <div class='project-card'>
@@ -97,15 +107,19 @@
                     <p class='subtext'>A Client-Trainer application where you as a client can choose your celebrity trainer of choice and book a session with your workout preference.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/eat-lift-pray-frontend' target="_blank" rel="noopener noreferrer">View here</a></p>
+                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/eat-lift-pray-frontend' target="_blank" rel="noopener noreferrer">GitHub</a></p>
                     </div>
                 </div>
                 <!-- <div class='project-card'>
-                    <img class='project-image' src='' alt='' />
-                    <h3>Animalgram 2.0</h3>
-                    <p class='subtext'></p>
+                    <img class='project-image' src='src/images/CalculatorJS.png' alt='CalculatorJS' />
+                    <h3>CalculatorJS</h3>
+                    <p class='subtext'>A calculator made using JavaScript</p>
+                    <div class='hairline'>
                     <hr/>
-                    <p class='subtext'>View here</p>
+                    <p class='subtext'><a class='project-link' href='https://pastasauce59.github.io/calculatorJS/' target="_blank" rel="noopener noreferrer">View here</a> |
+                        <a class='project-link' href='https://github.com/pastasauce59/calculatorJS' target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </p>
+                    </div>
                 </div> -->
             </div>
         </section>
