--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
                     <p class='subtext'>An application to store brainstormed ideas akin to virtual sticky notes.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/brain-store-m-board_frontend' target="_blank" rel="noopener noreferrer">GitHub</a></p>
+                    <p class='subtext'><a class='project-link' href='https://modest-ramanujan-2ed9a4.netlify.app/' target="_blank" rel="noopener noreferrer">View here</a> |
+                        <a class='project-link' href='https://github.com/pastasauce59/brain-store-m-board_frontend' target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </p>
                     </div>
                 </div>
                 <div class='project-card'>
