added live link to Fullstack Hotels project

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
                     <p class='subtext'>An application for booking a room (or rooms) at your choice of hotels for a relaxing vacation and brief reprieve from coding.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/full-stack-hotels' target="_blank" rel="noopener noreferrer">GitHub</a></p>
+                    <p class='subtext'><a class='project-link' href='https://thawing-tor-30862.herokuapp.com/' target="_blank" rel="noopener noreferrer">View here</a> |
+                        <a class='project-link' href='https://github.com/pastasauce59/full-stack-hotels' target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </p>
                     </div>
                 </div>
                 <div class='project-card'>
