--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
             <h2>Projects</h2>
             <div class='project-container'>
                 <div class='project-card'>
+                    <img class='project-image' src='src/images/study-japanese.png' alt='Study🇯🇵Japanese' />
+                    <h3>Study🇯🇵Japanese!</h3>
+                    <p class='subtext'>Learn the Japanese alphabet of hiragana and katakana with tables and study cards and then test your knowledge with a quiz!</p>
+                    <div class='hairline'>
+                    <hr/>
+                    <p class='subtext'><a class='project-link' href='https://study-japanese-alphabet.netlify.app/' target="_blank" rel="noopener noreferrer">View here</a> |
+                        <a class='project-link' href='https://github.com/pastasauce59/study-japanese' target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </p>
+                    </div>
+                </div>
+                <div class='project-card'>
                     <img class='project-image' src='src/images/CalculatorJS.png' alt='CalculatorJS' />
                     <h3>CalculatorJS</h3>
                     <p class='subtext'>A calculator made using JavaScript.</p>
