code cleanup and added emaily project to portfolio page

--- a/index.html
+++ b/index.html
@@ -73,14 +73,25 @@
             <h2>Projects</h2>
             <div class='project-container'>
                 <div class='project-card'>
+                    <img class='project-image' src='src/images/EmailyApp.png' alt='Emaily Application' />
+                    <h3>Emaily</h3>
+                    <p class='subtext'>Send mass emails/survey campaigns with automated emials and collect feedback from recipients!</p>
+                    <div class='hairline'>
+                    <hr/>
+                        <p class='subtext'><a class='project-link' href='https://emaily-email.herokuapp.com/' target="_blank" rel="noopener noreferrer">View here</a> |
+                            <a class='project-link' href='https://github.com/pastasauce59/Emaily' target="_blank" rel="noopener noreferrer">GitHub</a>
+                        </p>
+                    </div>
+                </div>
+                <div class='project-card'>
                     <img class='project-image' src='src/images/study-japanese.png' alt='Study🇯🇵Japanese' />
                     <h3>Study🇯🇵Japanese!</h3>
                     <p class='subtext'>Learn the Japanese alphabet of hiragana and katakana with tables and study cards and then test your knowledge with a quiz!</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://study-japanese-alphabet.netlify.app/' target="_blank" rel="noopener noreferrer">View here</a> |
-                        <a class='project-link' href='https://github.com/pastasauce59/study-japanese' target="_blank" rel="noopener noreferrer">GitHub</a>
-                    </p>
+                        <p class='subtext'><a class='project-link' href='https://study-japanese-alphabet.netlify.app/' target="_blank" rel="noopener noreferrer">View here</a> |
+                            <a class='project-link' href='https://github.com/pastasauce59/study-japanese' target="_blank" rel="noopener noreferrer">GitHub</a>
+                        </p>
                     </div>
                 </div>
                 <div class='project-card'>
@@ -89,9 +100,9 @@
                     <p class='subtext'>A calculator made using JavaScript.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://pastasauce59.github.io/calculatorJS/' target="_blank" rel="noopener noreferrer">View here</a> |
-                        <a class='project-link' href='https://github.com/pastasauce59/calculatorJS' target="_blank" rel="noopener noreferrer">GitHub</a>
-                    </p>
+                        <p class='subtext'><a class='project-link' href='https://pastasauce59.github.io/calculatorJS/' target="_blank" rel="noopener noreferrer">View here</a> |
+                            <a class='project-link' href='https://github.com/pastasauce59/calculatorJS' target="_blank" rel="noopener noreferrer">GitHub</a>
+                        </p>
                     </div>
                 </div>
                 <div class='project-card'>
@@ -100,9 +111,9 @@
                     <p class='subtext'>An application to store brainstormed ideas akin to virtual sticky notes.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://brain-store-mboard.netlify.app' target="_blank" rel="noopener noreferrer">View here</a> |
-                        <a class='project-link' href='https://github.com/pastasauce59/brain-store-m-board_frontend' target="_blank" rel="noopener noreferrer">GitHub</a>
-                    </p>
+                        <p class='subtext'><a class='project-link' href='https://brain-store-mboard.netlify.app' target="_blank" rel="noopener noreferrer">View here</a> |
+                            <a class='project-link' href='https://github.com/pastasauce59/brain-store-m-board_frontend' target="_blank" rel="noopener noreferrer">GitHub</a>
+                        </p>
                     </div>
                 </div>
                 <div class='project-card'>
@@ -111,9 +122,9 @@
                     <p class='subtext'>An application for booking a room (or rooms) at your choice of hotels for a relaxing vacation and brief reprieve from coding.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://thawing-tor-30862.herokuapp.com/' target="_blank" rel="noopener noreferrer">View here</a> |
-                        <a class='project-link' href='https://github.com/pastasauce59/full-stack-hotels' target="_blank" rel="noopener noreferrer">GitHub</a>
-                    </p>
+                        <p class='subtext'><a class='project-link' href='https://thawing-tor-30862.herokuapp.com/' target="_blank" rel="noopener noreferrer">View here</a> |
+                            <a class='project-link' href='https://github.com/pastasauce59/full-stack-hotels' target="_blank" rel="noopener noreferrer">GitHub</a>
+                        </p>
                     </div>
                 </div>
                 <div class='project-card'>
@@ -122,28 +133,13 @@
                     <p class='subtext'>A Client-Trainer application where you as a client can choose your celebrity trainer of choice and book a session with your workout preference.</p>
                     <div class='hairline'>
                     <hr/>
-                    <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/eat-lift-pray-frontend' target="_blank" rel="noopener noreferrer">GitHub</a></p>
+                        <p class='subtext'><a class='project-link' href='https://github.com/pastasauce59/eat-lift-pray-frontend' target="_blank" rel="noopener noreferrer">GitHub</a></p>
                     </div>
                 </div>
-                <!-- <div class='project-card'>
-                    <img class='project-image' src='src/images/CalculatorJS.png' alt='CalculatorJS' />
-                    <h3>CalculatorJS</h3>
-                    <p class='subtext'>A calculator made using JavaScript</p>
-                    <div class='hairline'>
-                    <hr/>
-                    <p class='subtext'><a class='project-link' href='https://pastasauce59.github.io/calculatorJS/' target="_blank" rel="noopener noreferrer">View here</a> |
-                        <a class='project-link' href='https://github.com/pastasauce59/calculatorJS' target="_blank" rel="noopener noreferrer">GitHub</a>
-                    </p>
-                    </div>
-                </div> -->
             </div>
         </section>
         <footer id='contact'>
             <h2>Contact me</h2>
-            <!-- <p>mikeprimo91@gmail.com</p> -->
-
-            <!-- <p><a href='thankyou.html'>TY PAGE TEST</a></p> -->
-
 
             <form class='contact-form' action="https://formsubmit.co/c6c80f2493b5d7d4f376f1930401d4a7" method="POST">
                 <input type="hidden" name="_subject" value="New submission!">
@@ -151,7 +147,6 @@
                 <input type="hidden" name="_next" value="https://pastasauce59.github.io/Portfolio/thankyou">
                 <input type="text" name="name" placeholder="Your name" required>
                 <input type='email' name='email' placeholder='Email address' required>
-                <!-- <input type="text" name="message" placeholder='Write your message here' required> -->
                 <textarea name="message" placeholder='Write your message here' required></textarea>
                 <button class='button' type="submit">Send</button>
            </form>
